--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tma.js/sdk-solid": "^2.1.0",
     "@tma.js/solid-router-integration": "^2.0.0",
     "@tonconnect/ui": "^2.0.0",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "eruda": "^3.0.1",
     "solid-js": "^1.8.16"
   },
